[gd_scene load_steps=6 format=3 uid="uid://bpdn4qiyiuosk"]

[ext_resource type="Script" path="res://Art Assets/ArtScripts/mainmenu.gd" id="1_0o6a6"]
[ext_resource type="FontFile" uid="uid://bcab12gimgui0" path="res://Art Assets/Fonts/OldLondon.ttf" id="1_3l4ce"]
[ext_resource type="Texture2D" uid="uid://c7bosyh0tifwo" path="res://Art Assets/UI/Start.png" id="3_as1so"]
[ext_resource type="Texture2D" uid="uid://b56x5l1g0a3jx" path="res://Art Assets/UI/Quit.png" id="4_od6dv"]
[ext_resource type="Texture2D" uid="uid://bpgkq8y0soeyd" path="res://Art Assets/UI/Settings.png" id="4_tioxj"]

[node name="Menu" type="Control"]
layout_mode = 3
anchor_right = 0.098
anchor_bottom = 0.164
offset_right = 0.103996
offset_bottom = -0.272003
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0o6a6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 2
offset_right = 188.0
offset_bottom = 137.0
size_flags_horizontal = 0
theme_override_constants/separation = 15

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_3l4ce")
theme_override_font_sizes/font_size = 50
icon = ExtResource("3_as1so")
flat = true
alignment = 0
icon_alignment = 1

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("4_tioxj")
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_3l4ce")
theme_override_font_sizes/font_size = 50
icon = ExtResource("4_od6dv")
flat = true
alignment = 0
icon_alignment = 1

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
